# asset-processing-bot-webapp

./: README.md  devbox.json  process-compose.yaml  pyproject.toml  ruff.toml
app/: config.py  main.py
app/bot/: create_bot.py
app/bot/handlers/: start_router.py
app/frontend/webapp/: components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
app/frontend/webapp/src/: App.tsx  main.tsx
app/frontend/webapp/src/components/profile-page/: page.tsx
app/frontend/webapp/src/components/profile-page/components/: profile-content.tsx  profile-header.tsx
app/frontend/webapp/src/hero-section/: page.tsx
