[project]
name = "asset-processing-bot-webapp"
version = "0.1.0"
description = ""
authors = [
    {name = "gl_epka",email = "nechaevgleb@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "web3 (>=7.13.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
